src/popup/pages/brand/brand.scss
.brand-page {
  display: flex;
  flex-direction: column;

  &__header {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
    padding: 16px 18px;

    &__icon {
      width: 72px;
      border-radius: 50vh;
      margin-right: 20px;
    }

    &__block {
      display: flex;
      flex-direction: column;
      margin-top: 6px;

      &__title {
        font-weight: 700;
        font-size: 18px;
        color: #303133;
      }

      &__caption {
        font-weight: 400;
        font-size: 13px;
        color: rgba(#434d5a, 0.75);
      }
    }
  }

  &__body {
    padding: 0 10px 16px;
    &__divider {
      background-color: rgba(black, 0.05);
      height: 1px;
    }
    &__content {
      margin: auto 12px;
      &__title {
        font-weight: 700;
        font-size: 15px;
        color: #434d5a;
      }
      &__text {
        position: relative;
        font-weight: 400;
        font-size: 12px;
        color: rgba(#565d6d, 0.8);
        line-height: 17px;
        margin-top: 4px;
        height: 50px;
        overflow: hidden;
        word-break: break-all;

        &--action {
          position: absolute;
          bottom: 0;
          right: 0;
          font-weight: 400;
          font-size: 12px;
          color: #4f6ef7;
          line-height: 17px;
          cursor: pointer;
          background: linear-gradient(90deg, rgba(white, 0), white, white);
          width: 50px;
          text-align: right;
        }

        &--expand {
          height: unset;
          overflow: visible;
          word-break: break-word;
          margin-bottom: 80px;
        }
      }
    }
  }
}

